Cynthia -- small k to large K

--- a/paper/sections/bounds.tex
+++ b/paper/sections/bounds.tex
@@ -1467,7 +1467,7 @@ breadth-first exploration of the state space of rule lists.
 %
 Now suppose we integrate permutation-aware garbage collection into
 our execution of branch-and-bound, so that after evaluating
-prefixes of length~$k$, we only keep a single best prefix
+prefixes of length~$K$, we only keep a single best prefix
 from each set of prefixes equivalent up to a permutation.
 
 \begin{theorem}[Upper bound on the total number of prefix evaluations with
