Cynthia -- fix sentence about the symmetry map keys

--- a/paper/sections/implementation.tex
+++ b/paper/sections/implementation.tex
@@ -3,7 +3,13 @@
 
 Our algorithm is implemented with the use of a trie, a symmetry-aware map, and a queue as our core data structures. We use the trie as a cache to keep track of rule lists we have already evaluated. Each node in the trie contains the metadata associated with that corresponding rule list. This metadata includes bookkeeping information such as what child rule lists are feasible as well as information such as the lower bound and prediction for that rule list. Our trie also tracks the best observed rule list by keeping track of the minimum objective found and its associated rule list.
 
-We implement the symmetry-aware map as an STL unordered\_map. We have two different versions of the map that both allow identical permutations to map to the same key. In both cases, the values contain the actual ordering of the rules that represents the current best prefix for that permutation. In the first version, keys to the map are the canonical order of rule lists: i.e. the lists 3-2-1 and 2-3-1 both map to 1-2-3. The second version has keys that represent the captured data points. These are equivalent for the rule lists 3-2-1 and 2-3-1, so both will map to the same key. Most data sets have a large amount of data, so the keys representing the canonical ordering are usually more efficient. In general, for long runs of our algorithm, the symmetry-aware map dominates our memory usage. When inserting into the symmetry-aware map, we check if there is a permutation P1 of this rule list P0 already in the map. If the objective of P0 is better than the objective of P1, we update the map and remove P1 and its subtree from the trie. Otherwise we don't insert P0 into the symmetry-aware map or the trie.
+We implement the symmetry-aware map as an STL unordered\_map. We have two different versions of the map that both allow identical permutations to map to the same key. In both cases, the values contain the actual ordering of the rules that represents the current best prefix for that permutation. In the first version, keys to the map are the canonical order of rule lists: i.e. the lists 3-2-1 and 2-3-1 both map to 1-2-3. The second version has keys that represent the captured data points. These are equivalent for the rule lists 3-2-1 and 2-3-1, so both will map to the same key.
+%
+Note that encodings of rule lists in canonical order tend to be
+significantly smaller than encodings of captured data points,
+especially for large datasets.
+%
+In general, for long runs of our algorithm, the symmetry-aware map dominates our memory usage. When inserting into the symmetry-aware map, we check if there is a permutation P1 of this rule list P0 already in the map. If the objective of P0 is better than the objective of P1, we update the map and remove P1 and its subtree from the trie. Otherwise we do not insert P0 into the symmetry-aware map or the trie.
 
 We use a queue to index all of the leaves of the trie that still need to be explored. We implement a number of different scheduling schemes including BFS, DFS, and a priority queue. We also have a stochastic exploration process that bypasses the use of a queue by walking down the trie, randomly choosing a child each time, until a leaf is chosen to be explored. The priority queue allows us to order our exploration by different metrics such as the lower bound, the objective, or the curiosity of the leaves. We find that ordering by curiosity will often, but not always, lead to a faster runtime than using BFS.
 
