--- a/paper/sections/bounds.tex
+++ b/paper/sections/bounds.tex
@@ -1,4 +1,4 @@
-\section{Additional problem structure and computational consequences}
+
 
 Our problem has rich structure beyond the hierarchical objective lower bound
 in Theorem~\ref{thm:bound}, including several instances of symmetries.
@@ -2017,7 +2017,7 @@ $\Obj(\RL, \x, \y) \ge \sum_{u=1}^U \theta(e_u)$.
 \end{kdd}
 \end{proposition}
 
-Thus, if multiple observations that have identical features and
+Thus, if multiple observations have identical features and
 opposite labels, no rule list can correctly classify all observations.
 %
 For each set of such observations, the number of mistakes is at least
