Minor tex typos

--- a/paper/sections/experiments.tex
+++ b/paper/sections/experiments.tex
@@ -31,7 +31,7 @@ Figure \ref{fig:ablation} presents a view of the same experiments, focusing
 on just three of the optimizations. These charts depict the number of rule
 lists of a given length in the queue during the algorithm's execution.
 
-begin{figure}[t!]
+\begin{figure}[t!]
 \begin{center}
 %\includegraphics[width=0.75\textwidth]{figs/sketch-comparison.png}
 \begin{arxiv}
@@ -158,7 +158,7 @@ identical pts. bound & --- & 48 & $\ge 10$ & $>286$ & $>282$ \\
 \caption{Ablation experiment.
 Total time, time to optimum, maximum evaluated prefix length,
 number of queue insertions, maximum queue size.}
-\abel{tab:ablation}
+\label{tab:ablation}
 \end{table}
 
 \begin{figure}[t!]
