Cynthia -- rename bounds section

--- a/paper/sections/bounds.tex
+++ b/paper/sections/bounds.tex
@@ -1,4 +1,4 @@
-
+\section{Lower bounds for proving optimality}
 
 Our problem has rich structure beyond the hierarchical objective lower bound
 in Theorem~\ref{thm:bound}, including several instances of symmetries.
