Need to fill in machine specs

--- a/paper/sections/experiments.tex
+++ b/paper/sections/experiments.tex
@@ -6,7 +6,8 @@ Our experimental analysis addresses four questions:
 (2) How rapidly does the objective function converge?
 (3) How rapidly does CORELS prune the search space?
 (4) How much does each of the implementation optimizations contribute to CORELS' performance?
-All results presented use the COMPAS data set unless otherwise noted.
+All results presented use the COMPAS data set unless otherwise noted,
+and were executed on (describe machine) \dots
 
 We first ran a 10-fold cross validation experiment using CORELS and eight other algorithms:
 GLM, SVM, AdaBoost, CART, C4.5, RF, RIPPER, and scalable rule lists (SBRL).
