--- a/paper/sections/implementation.tex
+++ b/paper/sections/implementation.tex
@@ -15,7 +15,7 @@ We have two different versions of the map.
 Both versions map permutations of the same set of rules to the same key, whose value
 contains the best rule ordering (i.e., the one with the smallest objective).
 The two map implementations differ in the representation of keys.
-Every rule has a rule id number, and We call the numerically sorted order of a set of rules its
+Every rule has a rule id number, and we call the numerically sorted order of a set of rules its
 canonical order.
 Keys in one version of the map represent the set of rules (in canonical order) comprising a
 rule list prefix.
