--- a/paper/sections/experiments.tex
+++ b/paper/sections/experiments.tex
@@ -130,26 +130,21 @@ as a function of wall clock time.
 Missing: horizontal lines and x-ticks for CART and C4.5.
 %
 Bottom:
-The logarithm (base 10) of the upper bound
-from Proposition~\ref{prop:remaining-eval-coarse}
-on the size of the remaining search space,
-as a function of wall clock time.
-%
-This bound depends on the total number of available rules,
-as well as two dynamic quantities:
-the current best objective value,
-and the histogram of logical queue elements,
-partitioned by prefix length.}
+$\lfloor \log_{10} \Remaining(\CurrentObj, \Queue) \rfloor$
+as a function of wall clock time,
+where~$\Remaining(\CurrentObj, \Queue)$ is the upper bound
+from Theorem~\ref{thm:remaining-eval-fine}
+on the size of the remaining search space.}
 \label{fig:objective}
 \end{figure}
 
 \begin{table}[t]
 \centering
 \begin{tabular}{l | c | c | c | c | c}
-Ablated & $t_\text{total}$ & $t_\text{opt}$ & $K_\text{max}$ & $i_\text{total}$ & $\max | Q |$ \\
+Removed & $t_\text{total}$ & $t_\text{opt}$ & $K_\text{max}$ & $i_\text{total}$ & $\max | Q |$ \\
 component & (s) & (s) & & ($\times 10^6$) & ($\times 10^6$) \\
 \hline
-none & 336 & 7 & 6 & 1.61 & 1.37 \\
+none (CORELS) & 336 & 7 & 6 & 1.61 & 1.37 \\
 priority queue & 453 & 4 & 6 & 1.93 & 1.58 \\
 support bounds & 580 & 11 & 6 & 2.38 & 2.06 \\
 permutation map & 3634 & 19 & 6 & 15.0 & 14.1 \\
@@ -157,9 +152,16 @@ lookahead bound & 4401 & 8 & 7 & 19.5 & 17.7 \\
 identical pts. bound & --- & 48 & $\ge 10$ & $>286$ & $>282$ \\
 \end{tabular}
 \vspace{2mm}
-\caption{Ablation experiment.
-Total time, time to optimum, maximum evaluated prefix length,
-number of queue insertions, maximum queue size.}
+\caption{Per-component performance improvement.
+The columns report averages over 10 cross-validation folds for
+the total execution time, time to optimum, maximum evaluated prefix length,
+number of queue insertions, and maximum queue size.
+The first row corresponds to our full CORELS algorithm,
+and subsequent rows to variants that each exclude a specific
+implementation optimization or bound removed.
+(These experiments to do not measure the cumulative effects
+of simultaneously removing multiple components.)
+}
 \label{tab:ablation}
 \end{table}
 
@@ -171,7 +173,7 @@ number of queue insertions, maximum queue size.}
 \end{arxiv}
 \begin{kdd}
 %\includegraphics[width=0.5\textwidth]{figs/ela_compas-queue.pdf}
-\includegraphics[trim={30mm 10mm 20mm 10mm}, width=0.5\textwidth]{figs/ela_compas_compare_small-queue.pdf}
+\includegraphics[trim={30mm 10mm 20mm 10mm}, width=0.45\textwidth]{figs/ela_compas_compare_small-queue.pdf}
 \end{kdd}
 \end{center}
 \caption{Ablation experiment and logical queue composition.
