Clean up tex packages etc.

--- a/paper/arxiv.tex
+++ b/paper/arxiv.tex
@@ -1,26 +1,14 @@
 \documentclass[aoas,preprint]{imsart}
-\usepackage{fullpage}
 \setattribute{journal}{name}{}
-\usepackage[usenames,dvipsnames,svgnames,table]{xcolor}
 
-\usepackage{graphicx,verbatim}
+\usepackage{amsmath,amssymb,amsthm,amsfonts}
+\usepackage{fullpage}
 \usepackage[round]{natbib}
 \usepackage{url}
-\usepackage{amsmath,amssymb,amsthm,amsfonts}
-\usepackage{algorithm}
-\usepackage{algpseudocode}
-\usepackage{todonotes}
-\usepackage{subfig}
-\usepackage{dsfont}
-\usepackage{listings}
-\usepackage{comment}
+\usepackage[usenames,dvipsnames,svgnames,table]{xcolor}
 
-\usepackage{tikz}
-\usetikzlibrary{arrows}
-
+\input{latex_front}
 \input{latex_macros}
-\frenchspacing
-\hyphenation{speed-up}
 
 \newtheorem{lemma}{Lemma}
 \newtheorem{theorem}{Theorem}
