--- a/paper/kdd17.tex
+++ b/paper/kdd17.tex
@@ -27,28 +27,10 @@
 
 \acmPrice{15.00}
 
-%\usepackage[usenames,dvipsnames,svgnames,table]{xcolor}
-
-\usepackage{graphicx,verbatim}
-%\usepackage[round]{natbib}
-%\usepackage{url}
-%\usepackage{amsmath,amssymb,amsthm,amsfonts}
-\usepackage{algorithm}
-\usepackage{algpseudocode}
-\usepackage{todonotes}
-\usepackage{subfig}
-\usepackage{dsfont}
-\usepackage{listings}
-%\usepackage{comment}
-
-\usepackage{tikz}
-\usetikzlibrary{arrows}
+\input{latex_front}
+\input{latex_macros}
 
 \includecomment{kdd}\excludecomment{arxiv}
-
-\input{latex_macros}
-\frenchspacing
-\hyphenation{speed-up}
 
 \begin{document}
 \title{Learning certifiably optimal rule lists for categorical data}
