--- a/paper/latex_front.tex
+++ b/paper/latex_front.tex
@@ -1,10 +1,11 @@
 \usepackage{algorithm}
 \usepackage{algpseudocode}
+\usepackage{caption}
 \usepackage{comment}
 \usepackage{dsfont}
 \usepackage{graphicx,verbatim}
 \usepackage{listings}
-\usepackage{subfig}
+\usepackage{subcaption}
 \usepackage{todonotes}
 
 \usepackage{tikz}
