--- a/paper/latex_macros.tex
+++ b/paper/latex_macros.tex
@@ -9,8 +9,8 @@
 \def\etal{{\it et al.}~}
 \def\bif{\bf if~}
 \def\belif{{\bf else if~}}
-\def\bthen{{\bf then~}}
-\def\belse{{\bf else~}}
+\def\bthen{{\bf then predict~}}
+\def\belse{{\bf else predict~}}
 
 \def\E{\mathbb{E}}
 \def\P{\mathbb{P}}
