--- a/paper/sections/experiments.tex
+++ b/paper/sections/experiments.tex
@@ -11,7 +11,7 @@ and were executed on (describe machine) \dots
 
 We first ran a 10-fold cross validation experiment using CORELS and eight other algorithms:
 GLM, SVM, AdaBoost, CART, C4.5, RF, RIPPER, and scalable rule lists (SBRL).
-There were no statistically significant differences in the accuracies of the different
+There were no statistically significant differences in the accuracies of the
 algorithms. In fact, the difference between folds was far larger than the difference
 between algorithms. We conclude that CORELS produces models whose accuracy is comparable
 to those found via other algorithms.
