Tweak the abstract

--- a/paper/sections/abstract.tex
+++ b/paper/sections/abstract.tex
@@ -1,10 +1,12 @@
-We build a custom discrete optimization technique for building rule lists that
+We present the design and implementation of a custom discrete optimization technique for building rule lists that
 are certifiably optimal over a categorical feature space.
 %
-Through the use of careful bounds, data structures, and bit-vector operations,
-we are able to achieve several orders of magnitude speedup in time,
-and a massive reduction of memory requirements.
+By leveraging algorithmic bounds, efficient data structures, and computational
+reuse,
+we achieve several orders of magnitude speedup in time
+and a massive reduction of memory consumption.
 %
-We can solve some practical problems to optimality in a matter of seconds.
+We demonstrate that our approach produces optimal rule lists on practical
+problems in a matter of seconds.
 %
-This approach is a new alternative to CART and other decision tree methods.
+This approach provides an alternative to CART and other decision tree methods.
